--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 
 <html lang="pt-BR"> 
-
+  
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social links Profile</title>
+    <title>Frontend Mentor | Social links profile</title>
+    <style>
+      .attribution { font-size: 11px; text-align: center; }
+      .attribution a { color: hsl(0, 0%, 100%); }
+    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-
+  
 <body>
     <div class="container">
         <div class="perfil">
-            <img src="C:\Users\Elias da Silva\OneDrive\Imagens\avatar-jessica.jpeg"  class="img">
+            <img src="C:\Users\Elias da Silva\OneDrive\Área de Trabalho\vscodee\social-links-profile-main\assets\images\avatar-jessica.jpeg" class="img">
             <h2>Jessica Randall</h2>
             <p class="loc">London, United Kingdom</p>
             <p class="bio">"Front-end developer and avid reader."</p>
@@ -28,6 +32,8 @@
             </ul>
         </div>
     </div>
+    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge"  target="_blank">Frontend Mentor</a>. 
+     Coded by <a href="#">Beatriz Brito</a>.
+    </div>
 </body>
-
 </html>
