--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <div class="perfil">
-            <img src="C:\Users\Elias da Silva\OneDrive\Área de Trabalho\vscodee\social-links-profile-main\assets\images\avatar-jessica.jpeg" class="img">
+            <img src="./assets/images/avatar-jessica.jpeg" class="img">
             <h2>Jessica Randall</h2>
             <p class="loc">London, United Kingdom</p>
             <p class="bio">"Front-end developer and avid reader."</p>
